--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-map-fields": "^1.3.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
